graphapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphapi
spec:
  selector:
    matchLabels:
      app: graphapi
  template:
    metadata:
      labels:
        app: graphapi
    spec:
      containers:
      - name: graphapi
        image: mfigurski80/tweet-api:4035741
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: graphapi
spec:
  selector:
    app: graphapi
  ports:
  - port: 80
    targetPort: 8080
