ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sentiment.mikolaj.space
    http:
      paths:
        - path: /graphql
          backend:
            serviceName: graphapi
            servicePort: 80
